--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
     </section>
 
 
+    <section class="wavy">
+        <div class="wrapper">
+            <h2 class="section-title">wavy</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure deserunt illo itaque veritatis quae, doloremque sed autem tenetur nobis consectetur. Quod quaerat a ad, voluptatum odit perferendis saepe vel dignissimos!</p>
+
+        </div>
+    </section>
+
+
     <section>
         <div class="wrapper">
             <h2 class="section-title"></h2>
